all issue fixed

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:     Newspaper Lite
-Theme URI:      https://store.mirrorgrid.com/themes/newspaper-lite/
-Author:         Mirrorgrid Store
-Author URI:     https://store.mirrorgrid.com/
+Theme URI:      https://themecentury.com/downloads/newspaper-lite-free-wordpress-theme/
+Author:         themecentury
+Author URI:     https://themecentury.com/
 Description:    Newspaper Lite is a  responsive newsportal style Free WordPress theme. This theme is mainly applicable for online magazines, newspaper, publishing, personal blogs and any kind of news sites.
-Version:        1.0.3
+Version:        1.0.5
 License:        GNU General Public License v3 or later
 License URI:    http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain:    newspaper-lite
@@ -15,3 +15,13 @@ This theme, like WordPress, is licensed under the GPL.
 Newspaper Lite is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v3 or later.
 */
+
+/*=============================================================================================
+ * --------------------------- Please do not write any code here ----------------------------- */
+/*=============================================================================================*/
+/*
+ * Note: Please go to Appreance >> Customize >> Additional Code >> Additional CSS and Write css code there.
+ * Warning: If you add any css code on this file than it's working file but when you update your theme all code will be replaced so please do not write any code here.
+ * Need Support please visit our official website https://themecentury.com
+ */
+ 
