--- a/rtl.css
+++ b/rtl.css
@@ -2,250 +2,84 @@
  * RTL CSS
  */
 
-/*--------------------------------------------------------------
-TOP HEADER CSS
---------------------------------------------------------------*/
-.rtl .top-header-section .date-section {
-	float: right;
-	margin-left: 15px;
-	margin-right: 0;
+/*=========================================================================
+-------------------------- Normalize Sections -----------------------------
+==========================================================================*/
+
+/*
+ * Box Slider Normalize
+ */
+.bx-wrapper{
+	direction:ltr;
 }
 
-.rtl #top-header-navigation {
-	float: right;
+.bx-wrapper li{
+	direction:rtl;
 }
 
-.rtl .top-social-wrapper {
-	float: left;
+/*=========================================================================
+-------------------------- Header Section --------------------------------
+==========================================================================*/
+
+.home-icon, 
+.main-navigation{
+	float:right;
 }
 
-.rtl .top-menu ul li, .rtl #footer-navigation ul li {
-	border-left: medium none;
-	border-right: 2px solid rgba(0, 0, 0, 0.3);
-	padding-left: 0;
-	padding-right: 15px;
+.header-search-wrapper{
+	float:left;
 }
 
-/*--------------------------------------------------------------
-MIDDLE HEADER CSS
---------------------------------------------------------------*/
-.rtl .site-branding {
-	float: right;
+.main-navigation ul li{
+	float:right;
 }
 
-.rtl .header-ads-wrapper {
-	float: left;
+/*=========================================================================
+-------------------------- Widget Sections --------------------------------
+==========================================================================*/
+
+/*
+ * Widget Normalize
+ */
+.block-header, 
+.widget .widget-title-wrapper, 
+.related-articles-wrapper .widget-title-wrapper{
+	text-align:right;
+	border-width:0 2px 2px 0;
 }
 
-/*--------------------------------------------------------------
-BOTTOM HEADER CSS
---------------------------------------------------------------*/
-.rtl .home-icon, .rtl #site-navigation {
-	float: right;
+.widget_archive a, 
+.widget_categories a, 
+.widget_meta a, 
+.widget_nav_menu li a, 
+.widget_pages li a, 
+.widget_recent_comments li, 
+.widget_recent_entries a, 
+.widget_rss li{
+	padding-left:0;
+	padding-right:20px;
 }
 
-.rtl .header-search-wrapper {
-	float: left;
+.widget_archive a::before, 
+.widget_categories a::before, 
+.widget_recent_entries a::before, 
+.widget_meta a::before, 
+.widget_recent_comments li::before, 
+.widget_rss li::before, 
+.widget_pages li a::before, 
+.widget_nav_menu li a::before{
+	right:0;
+	left:unset;
 }
 
-.rtl #site-navigation ul li.menu-item-has-children a,
-.rtl #site-navigation ul li.page_item_has_children a {
-	margin-right: 0;
-	margin-left: 15px;
+/*
+ * Widget Recent Entries
+ */
+.widget_recent_entries a::before{
+	content:"\f100";
 }
 
-.rtl #site-navigation li.menu-item-has-children > a:after,
-.rtl #site-navigation li.page_item_has_children > a:after {
-	content: "";
-}
-
-.rtl #site-navigation ul.sub-menu li.menu-item-has-children > a:after,
-.rtl #site-navigation ul.children li.page_item_has_children > a:after {
-	content: "";
-}
-
-.rtl #site-navigation li.menu-item-has-children > a:before,
-.rtl #site-navigation li.page_item_has_children > a:before {
-	content: "\f107";
-	font-family: FontAwesome;
-	position: absolute;
-	left: 5px;
-	top: 2px;
-}
-
-.rtl #site-navigation ul.sub-menu li.menu-item-has-children > a:before,
-.rtl #site-navigation ul.children li.page_item_has_children > a:before {
-	content: "\f104";
-}
-
-.rtl #site-navigation ul.sub-menu,
-.rtl #site-navigation ul.children {
-	right: 0;
-}
-
-.rtl #site-navigation ul.sub-menu ul,
-.rtl #site-navigation ul.children ul {
-	right: 100%;
-}
-
-.rtl .header-search-wrapper .search-form-main {
-	left: 0;
-	right: auto;
-}
-
-.rtl .header-search-wrapper .search-form-main::before {
-	right: auto;
-	left: 10px;
-}
-
-/*--------------------------------------------------------------
-TICKER CSS
---------------------------------------------------------------*/
-.rtl .ticker-caption {
-	float: right;
-}
-
-.rtl .ticker-caption::after {
-	left: auto;
-	right: 100%;
-	-webkit-transform: rotateY(180deg);
-	-moz-transform: rotateY(180deg);
-	-ms-transform: rotateY(180deg);
-	transform: rotateY(180deg);
-}
-
-.rtl .ticker-content-wrapper .bx-controls {
-	right: 0;
-	left: 5px;
-}
-
-.rtl .ticker-content-wrapper {
-	border-right: none;
-}
-
-.rtl .ticker-content-wrapper #mgs-newsTicker .news-post {
-	padding-right: 30px;
-	text-align: right;
-}
-
-/*--------------------------------------------------------------
-SLIDER CSS
---------------------------------------------------------------*/
-
-.rtl .mgs-featured-slider-wrapper {
-	float: right;
-	margin-right: 0;
-	margin-left: 1%;
-}
-
-.rtl .bx-wrapper {
-	direction: ltr;
-}
-
-.rtl .slider-content-wrapper {
-	text-align: right;
-}
-
-/*--------------------------------------------------------------
-Block Widgets
---------------------------------------------------------------*/
-
-.rtl .block-header .block-title,
-.rtl .widget .widget-title,
-.rtl .related-articles-wrapper .related-title {
-	float: right;
-}
-
-.rtl .block-header,
-.rtl .widget .widget-title-wrapper,
-.rtl .related-articles-wrapper .widget-title-wrapper {
-	border-left: none;
-	border-right: 2px solid #f54337;
-}
-
-.rtl .mgs-column-2 {
-	float: right;
-	margin-left: 0;
-}
-
-.rtl .right-column-wrapper.mgs-column-2 {
-	margin-left: 2%;
-	float: left;
-}
-
-.rtl .list-posts-block .single-post-wrapper .post-thumb-wrapper,
-.rtl .column-posts-block .single-post-wrapper.secondary-post .post-thumb-wrapper {
-	float: right;
-	margin-right: 0;
-	margin-left: 2%;
-}
-
-.rtl .list-posts-block .single-post-wrapper .post-content-wrapper,
-.rtl .column-posts-block .single-post-wrapper.secondary-post .post-content-wrapper,
-.rtl .newspaper_lite_block_list .post-content-wrapper {
-	float: left;
-}
-
-.rtl .category-button a {
-	margin: 0 0 2px 0;
-}
-
-.rtl .post-meta-wrapper .posted-on {
-	margin-right: 0;
-}
-
-.rtl .newspaper_lite_block_list .post-thumb-wrapper {
-	float: right;
-}
-
-.rtl .home-primary-wrapper {
-	float: right;
-}
-
-.rtl .home-secondary-wrapper {
-	float: left;
-}
-
-.rtl .posted-on::before {
-	margin-right: 0;
-}
-
-.rtl.archive .page-header {
-	padding-right: 0;
-}
-
-/*--------------------------------------------------------------
-Footer section
---------------------------------------------------------------*/
-.rtl #bottom-footer .site-info {
-	float: right;
-}
-
-.rtl #footer-navigation {
-	float: left;
-}
-
-.archive-classic .entry-footer .entry-meta {
-	direction: ltr;
-}
-
-/*--------------------------------------------------------------
-Innerpages
---------------------------------------------------------------*/
-.rtl #primary, .rtl.home.blog #primary,
-.rtl .newspaper-lite-author-wrapper .author-avatar {
-	float: right;
-}
-
-.rtl #secondary, .rtl.home.blog #secondary,
-.rtl .newspaper-lite-author-wrapper .author-desc-wrapper {
-	float: left;
-}
-
-.rtl.no-sidebar-center #primary {
-	float: none;
-}
-
-.rtl .comments-link a:after {
-	content: "\200E‎";
+.widget_meta a::before, 
+.widget_nav_menu li a::before{
+	content:"\f104";
 }
