rtl css generate

--- a/assets/css/newspaper-lite.css
+++ b/assets/css/newspaper-lite.css
@@ -406,6 +406,22 @@ Alignments
   display: block;
   margin: 0 auto; }
 
+/*--------------------------------------------------------------
+Accessibility Rules
+--------------------------------------------------------------*/
+/*
+a{
+  &:focus, &:active{
+      outline: 1px dotted #dedede;
+  }
+}
+
+button{
+  &:focus, &:active{
+    outline:1px dotted #dedede;
+  }
+}
+*/
 .alignleft {
   display: inline;
   float: left;
