--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name:     Newspaper Lite
 Theme URI:      https://themecentury.com/downloads/newspaper-lite-free-wordpress-theme/
 Author:         themecentury
 Author URI:     https://themecentury.com/
-Description:    Newspaper Lite is a  responsive newsportal style Free WordPress theme. This theme is mainly applicable for online magazines, newspaper, publishing, personal blogs and any kind of news sites.
+Description:    Newspaper Lite is a  responsive newsportal style Free WordPress theme and this theme is mainly applicable for online magazines, newspaper, publishing, personal blogs and any kind of news sites. Widget base home page, multiple widget area, header layout, footer layout, Multiple layout of widget and many more. Please check demo on https://demo.themecentury.com/wpthemes/newspaper-lite/ and check https://docs.themecentury.com/products/newspaper-lite/ for docs.
 Version:        1.0.6
 License:        GNU General Public License v3 or later
 License URI:    http://www.gnu.org/licenses/gpl-3.0.html
